--- a/templates/index.html
+++ b/templates/index.html
@@ -14,10 +14,10 @@
   <link href="https://cdn.anychart.com/releases/8.4.0/fonts/css/anychart-font.min.css" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Barlow+Condensed" rel="stylesheet">
   <link rel="stylesheet" href="static/css/main.css">
-  <script type="text/javascript" src="static/js/Cesium-1.65/Build/Cesium/Cesium.js"></script>
-<!--  <script type="text/javascript" src="Cesium-1.65/Apps/Sandcastle/CesiumSandcastle.js"></script>-->
-  <link href="static/js/Cesium-1.65/Build/Cesium/Widgets/widgets.css" rel="stylesheet">
-  <link href="static/js/Cesium-1.65/Apps/Sandcastle/templates/bucket.css">
+  <!-- <script type="text/javascript" src="Cesium-1.65/Build/Cesium/Cesium.js"></script>
+  <script type="text/javascript" src="Cesium-1.65/Apps/Sandcastle/CesiumSandcastle.js"></script>
+  <link href="Cesium-1.65/Build/Cesium/Widgets/widgets.css" rel="stylesheet">
+  <link href="Cesium-1.65/Apps/Sandcastle/templates/bucket.css"> --> 
 </head>
 
 <body>
@@ -27,11 +27,13 @@
       <div class="row" id="selection">
         <div class="col-md-12 text-center">
           <h1 class="header-text text-center">WORLD HAPPINESS VISUALIZATION</h1>
-          <select class="custom-select"id="selDatasetTwo" onchange="optionChangedOne(this.value)">
-            <option selected class="custom-option">Select Year</option>
+          <select class="custom-select"id="selDatasetTwo" onchange="optionChanged(this.value,'year')">
+            <option selected class="custom-option" value = "All">Select Year</option>
+            <option value="All">All Years</option>
           </select>
-          <select class="custom-select"id="selDatasetThree" onchange="optionChangedTwo(this.value)">
-            <option selected class="custom-option">Select Country</option>
+          <select class="custom-select"id="selDatasetThree" onchange="optionChanged(this.value,'country')">
+            <option selected class="custom-option" value = "All">Select Country</option>
+            <option value="All">All Countries</option>
           </select>
         </div>
       </div>
@@ -45,7 +47,7 @@
   <div class="jumbotron">
     <div class="container">
       <h1 class="display-4 text-center">EXPLORE THE DATA</h1>
-      <p class="lead text-center">The data can be explored in several ways. The data has three years of information on the measures of happiness. You can select a specific year and/or country</p>
+      <p class="lead text-center">The data can be explored in several ways. The data has four years of information on the measures of happiness. You can select a specific year and/or country</p>
       <hr class="my-4">
       <div class="text-center">
         <div class="row">
@@ -82,7 +84,7 @@
     </div>
     <div class="container-fluid" id="scatter-section">
       <h1 class="display-4 text-center">CORRELATION BETWEEN THE VARIABLES OF HAPPINESS</h1>
-      <p class="lead text-center">There are many factors that were ascertained from each countries climate,explore how these are related</p>
+      <p class="lead text-center">There are many factors that were ascertained from each countries climate, explore how these are related</p>
       <hr class="my-4">
       <div id="scatter"></div>
     </div>
@@ -135,23 +137,50 @@
       </a>
       <p class="text text-center">
         <small>© Copyright Mike Bryant - Mikayla Kosmala - Julia Serbing - Dorna Shakoory 2020</br>
-        UCSD© Data Science and Visualization Boot Camp</small>
+        UCI© Data Science and Visualization Boot Camp</small>
       </p>
     </div>
   </footer>
 
   <!-- <script src="https://cdn.plot.ly/plotly-1.31.2.min.js"></script> -->
+
   <!--   cesium javascript -->
-  <script type="text/javascript" src="static/js/app.js"></script>
+
   <!-- <script src="https://d3js.org/d3.v5.min.js"></script> -->
+  
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.7.1/d3-tip.min.js"></script>
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+  <script type="text/javascript" src="static/js/d3/d3.js"></script>
+  <script src="https://d3js.org/d3.v5.min.js" charset="utf-8"></script>
+  <!--
+    Path to Visualizations (javascript)
+      Scatter 
+      Barchart 
+      Guage
+      Globe
+      Table
+  -->
+  <!-- Scatter -->
+  <script type="text/javascript" src="static/js/drawScatter.js"></script>
+  <!-- Barchart -->
+  <!-- Guage -->
+  <script type="text/javascript" src="static/js/drawGauge.js"></script>
+  <!-- Globe -->
+  <!-- Table -->
+  <script type="text/javascript" src="static/js/drawScatter.js"></script>
+
+  
+  
+  <script src="{{ url_for('static', filename='js/app.js') }}"></script>
 
 
 </body>
+
+</html>
+
 
 </html>
