--- a/templates/index.html
+++ b/templates/index.html
@@ -171,7 +171,7 @@
   <script type="text/javascript" src="static/js/drawGauge.js"></script>
   <!-- Globe -->
   <!-- Table -->
-  <script type="text/javascript" src="static/js/drawScatter.js"></script>
+  <script type="text/javascript" src="static/js/drawTable.js"></script>
 
   
   
