Updated HTML and JS with Globe functions and pathing

--- a/templates/index.html
+++ b/templates/index.html
@@ -18,6 +18,8 @@
   <script type="text/javascript" src="Cesium-1.65/Apps/Sandcastle/CesiumSandcastle.js"></script>
   <link href="Cesium-1.65/Build/Cesium/Widgets/widgets.css" rel="stylesheet">
   <link href="Cesium-1.65/Apps/Sandcastle/templates/bucket.css"> --> 
+  <script src="https://cesium.com/downloads/cesiumjs/releases/1.65/Build/Cesium/Cesium.js"></script>
+  <link href="https://cesium.com/downloads/cesiumjs/releases/1.65/Build/Cesium/Widgets/widgets.css" rel="stylesheet">
 </head>
 
 <body>
